--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "max     20.00  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,15 +244,17 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "data = pd.read_csv(\"E:\\datamining\\student-mat.csv\", delimiter=';')\n",
-    "#print(var.to_string())\n",
+    "\n",
+    "# 1. Descriptive Statistics\n",
     "data.describe().round(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -277,18 +279,19 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 1. Descriptive Statistics\n",
     "data.median(numeric_only=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +300,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -313,13 +316,14 @@
     }
    ],
    "source": [
+    "# 1. Descriptive Statistics\n",
     "data.hist(figsize=(15, 10), bins=20, edgecolor='black')\n",
     "plt.show"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -334,10 +338,49 @@
     }
    ],
    "source": [
+    "# 1. Descriptive Statistics\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.boxplot(data=data, orient='h')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 1., ..., 0., 1., 0.],\n",
+       "       [1., 0., 1., ..., 1., 1., 0.],\n",
+       "       [1., 0., 1., ..., 1., 1., 0.],\n",
+       "       ...,\n",
+       "       [0., 1., 0., ..., 0., 1., 0.],\n",
+       "       [0., 1., 0., ..., 1., 1., 0.],\n",
+       "       [0., 1., 0., ..., 1., 1., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 2. Data Preprocessing Output\n",
+    "categorical_data = data.select_dtypes(include=['object']).columns\n",
+    "encoder = OneHotEncoder(sparse_output=False)\n",
+    "encoded_data = encoder.fit_transform(data[categorical_data])\n",
+    "encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out(categorical_data))\n",
+    "#encoded_df.describe().round(2)\n",
+    "display(encoded_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
