--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "max     20.00  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +245,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
     "\n",
     "data = pd.read_csv(\"E:\\datamining\\student-mat.csv\", delimiter=';')\n",
     "\n",
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +283,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +304,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -367,12 +371,138 @@
    ],
    "source": [
     "# 2. Data Preprocessing Output\n",
+    "\n",
+    "# Select data types that are categorical/objects (not ints)\n",
     "categorical_data = data.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "# Create encoder\n",
     "encoder = OneHotEncoder(sparse_output=False)\n",
+    "\n",
+    "# Encodes data\n",
     "encoded_data = encoder.fit_transform(data[categorical_data])\n",
+    "\n",
+    "# Creates dataframe so we can add it back to the data later\n",
     "encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out(categorical_data))\n",
-    "#encoded_df.describe().round(2)\n",
+    "\n",
+    "# Print the encoded data to show successful encoding\n",
     "display(encoded_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age  Medu  Fedu  traveltime  studytime  failures  famrel  freetime  \\\n",
+      "0     18     4     4           2          2         0       4         3   \n",
+      "1     17     1     1           1          2         0       5         3   \n",
+      "2     15     1     1           1          2         3       4         3   \n",
+      "3     15     4     2           1          3         0       3         2   \n",
+      "4     16     3     3           1          2         0       4         3   \n",
+      "..   ...   ...   ...         ...        ...       ...     ...       ...   \n",
+      "390   20     2     2           1          2         2       5         5   \n",
+      "391   17     3     1           2          1         0       2         4   \n",
+      "392   21     1     1           1          1         3       5         5   \n",
+      "393   18     3     2           3          1         0       4         4   \n",
+      "394   19     1     1           1          1         0       3         2   \n",
+      "\n",
+      "     goout  Dalc  ...  activities_no  activities_yes  nursery_no  nursery_yes  \\\n",
+      "0        4     1  ...            1.0             0.0         0.0          1.0   \n",
+      "1        3     1  ...            1.0             0.0         1.0          0.0   \n",
+      "2        2     2  ...            1.0             0.0         0.0          1.0   \n",
+      "3        2     1  ...            0.0             1.0         0.0          1.0   \n",
+      "4        2     1  ...            1.0             0.0         0.0          1.0   \n",
+      "..     ...   ...  ...            ...             ...         ...          ...   \n",
+      "390      4     4  ...            1.0             0.0         0.0          1.0   \n",
+      "391      5     3  ...            1.0             0.0         1.0          0.0   \n",
+      "392      3     3  ...            1.0             0.0         1.0          0.0   \n",
+      "393      1     3  ...            1.0             0.0         1.0          0.0   \n",
+      "394      3     3  ...            1.0             0.0         0.0          1.0   \n",
+      "\n",
+      "     higher_no  higher_yes  internet_no  internet_yes  romantic_no  \\\n",
+      "0          0.0         1.0          1.0           0.0          1.0   \n",
+      "1          0.0         1.0          0.0           1.0          1.0   \n",
+      "2          0.0         1.0          0.0           1.0          1.0   \n",
+      "3          0.0         1.0          0.0           1.0          0.0   \n",
+      "4          0.0         1.0          1.0           0.0          1.0   \n",
+      "..         ...         ...          ...           ...          ...   \n",
+      "390        0.0         1.0          1.0           0.0          1.0   \n",
+      "391        0.0         1.0          0.0           1.0          1.0   \n",
+      "392        0.0         1.0          1.0           0.0          1.0   \n",
+      "393        0.0         1.0          0.0           1.0          1.0   \n",
+      "394        0.0         1.0          0.0           1.0          1.0   \n",
+      "\n",
+      "     romantic_yes  \n",
+      "0             0.0  \n",
+      "1             0.0  \n",
+      "2             0.0  \n",
+      "3             1.0  \n",
+      "4             0.0  \n",
+      "..            ...  \n",
+      "390           0.0  \n",
+      "391           0.0  \n",
+      "392           0.0  \n",
+      "393           0.0  \n",
+      "394           0.0  \n",
+      "\n",
+      "[395 rows x 59 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Data Preprocessing Output\n",
+    "\n",
+    "# Drop original categorical data and replace with the encoded data\n",
+    "data_encoded = data.drop(columns=categorical_data).join(encoded_df)\n",
+    "\n",
+    "# Print new data after join of encoded categorical variables\n",
+    "print(data_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 4.90\n",
+      "R^2 Score: 0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Model Training & Performance Output\n",
+    "\n",
+    "# Split Data into target variable (G3) and features\n",
+    "X = data_encoded.drop(columns=['G3']) #features\n",
+    "y = data_encoded['G3']  # target\n",
+    "\n",
+    "# Put data into training and testing 80-20 (random split every time)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=None)\n",
+    "\n",
+    "# Create model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Train model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict based on the random test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model based on mean squared error\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+    "\n",
+    "# Evaluate model based on R squared score\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"R^2 Score: {r2:.2f}\")"
    ]
   },
   {
@@ -380,7 +510,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#4. Visualizations of Model Performance\n"
+   ]
   }
  ],
  "metadata": {
