removed specific file path

--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -2,240 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>Medu</th>\n",
-       "      <th>Fedu</th>\n",
-       "      <th>traveltime</th>\n",
-       "      <th>studytime</th>\n",
-       "      <th>failures</th>\n",
-       "      <th>famrel</th>\n",
-       "      <th>freetime</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>Dalc</th>\n",
-       "      <th>Walc</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G2</th>\n",
-       "      <th>G3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>395.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>16.70</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>2.52</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>2.04</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>3.94</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>3.11</td>\n",
-       "      <td>1.48</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>3.55</td>\n",
-       "      <td>5.71</td>\n",
-       "      <td>10.91</td>\n",
-       "      <td>10.71</td>\n",
-       "      <td>10.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.28</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.11</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>1.39</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>3.32</td>\n",
-       "      <td>3.76</td>\n",
-       "      <td>4.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>15.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>16.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>8.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>17.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>11.00</td>\n",
-       "      <td>11.00</td>\n",
-       "      <td>11.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>18.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>14.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>22.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>75.00</td>\n",
-       "      <td>19.00</td>\n",
-       "      <td>19.00</td>\n",
-       "      <td>20.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          age    Medu    Fedu  traveltime  studytime  failures  famrel  \\\n",
-       "count  395.00  395.00  395.00      395.00     395.00    395.00  395.00   \n",
-       "mean    16.70    2.75    2.52        1.45       2.04      0.33    3.94   \n",
-       "std      1.28    1.09    1.09        0.70       0.84      0.74    0.90   \n",
-       "min     15.00    0.00    0.00        1.00       1.00      0.00    1.00   \n",
-       "25%     16.00    2.00    2.00        1.00       1.00      0.00    4.00   \n",
-       "50%     17.00    3.00    2.00        1.00       2.00      0.00    4.00   \n",
-       "75%     18.00    4.00    3.00        2.00       2.00      0.00    5.00   \n",
-       "max     22.00    4.00    4.00        4.00       4.00      3.00    5.00   \n",
-       "\n",
-       "       freetime   goout    Dalc    Walc  health  absences      G1      G2  \\\n",
-       "count    395.00  395.00  395.00  395.00  395.00    395.00  395.00  395.00   \n",
-       "mean       3.24    3.11    1.48    2.29    3.55      5.71   10.91   10.71   \n",
-       "std        1.00    1.11    0.89    1.29    1.39      8.00    3.32    3.76   \n",
-       "min        1.00    1.00    1.00    1.00    1.00      0.00    3.00    0.00   \n",
-       "25%        3.00    2.00    1.00    1.00    3.00      0.00    8.00    9.00   \n",
-       "50%        3.00    3.00    1.00    2.00    4.00      4.00   11.00   11.00   \n",
-       "75%        4.00    4.00    2.00    3.00    5.00      8.00   13.00   13.00   \n",
-       "max        5.00    5.00    5.00    5.00    5.00     75.00   19.00   19.00   \n",
-       "\n",
-       "           G3  \n",
-       "count  395.00  \n",
-       "mean    10.42  \n",
-       "std      4.58  \n",
-       "min      0.00  \n",
-       "25%      8.00  \n",
-       "50%     11.00  \n",
-       "75%     14.00  \n",
-       "max     20.00  "
-      ]
-     },
-     "execution_count": 312,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
     }
    ],
    "source": [
@@ -248,7 +27,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "data = pd.read_csv(\"E:\\datamining\\student-mat.csv\", delimiter=';')\n",
+    "data = pd.read_csv(\".\\student-mat.csv\", delimiter=';')\n",
     "\n",
     "# 1. Descriptive Statistics\n",
     "data.describe().round(2)\n"
@@ -543,13 +322,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
